--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=https://chatty-backend.vercel.app
-VITE_SOCKET_URL=https://chatty-backend.vercel.app
-NODE_ENV=production
+VITE_BACKEND_URL=https://your-backend-url.herokuapp.com
+VITE_SOCKET_URL=https://your-backend-url.herokuapp.com
+VITE_PORT=5173
