--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-VITE_BACKEND_URL=https://your-backend-url.herokuapp.com
-VITE_SOCKET_URL=https://your-backend-url.herokuapp.com
+VITE_BACKEND_URL=https://chatty-backend-likit.vercel.app/api
+VITE_SOCKET_URL=https://chatty-backend-likit.vercel.app
 VITE_PORT=5173
