--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -4,7 +4,7 @@
   status = 200
 
 [build]
-  command = "npm run build"
+  command = "bash netlify-build.sh"
   publish = "dist"
 
 [context.production.environment]
