--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -17,5 +17,8 @@
         "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept, Authorization"
       }
     }
-  ]
+  ],
+  "env": {
+    "PORT": "5001"
+  }
 }
