--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,11 @@
     "uuid": "^11.0.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-loader": "^9.2.1",
+    "nodemon": "^3.1.7",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
