--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -1,26 +1,13 @@
 name = "chatty-backend"
-main = "./dist/worker.js"
 compatibility_date = "2024-01-19"
 compatibility_flags = ["nodejs_compat"]
-workers_dev = true
 
 [vars]
 MONGODB_URI = ""  # You'll need to set this in Cloudflare's dashboard
 JWT_SECRET = ""   # You'll need to set this in Cloudflare's dashboard
 
-[build]
-command = "npm install && npx webpack"
-watch_dir = "src"
-
 [site]
-bucket = "./dist"
+bucket = "./public"  # Static assets directory
 
 [triggers]
 crons = ["*/5 * * * *"]  # Run every 5 minutes to keep the worker alive
-
-[durable_objects]
-bindings = []
-
-[[migrations]]
-tag = "v1"
-new_classes = []
