--- a/frontend/wrangler.toml
+++ b/frontend/wrangler.toml
@@ -1,4 +1,5 @@
 name = "chatty-frontend"
+compatibility_date = "2024-01-19"
 type = "webpack"
 account_id = ""  # Your Cloudflare account ID
 workers_dev = true
@@ -7,9 +8,18 @@ workers_dev = true
 bucket = "./dist"  # Your build output directory
 entry-point = "workers-site"
 
+[pages]
+pages_build_output_dir = "dist"
+
+[build]
+command = "npm run build"
+
 [env.production]
 name = "chatty-frontend-prod"
 route = "your-domain.com/*"  # Replace with your domain
 
 [env.production.vars]
-VITE_BACKEND_URL = "wss://your-backend-url.workers.dev"  # Replace with your backend URL
+VITE_BACKEND_URL = "https://chatty-backend.pages.dev"
+
+[vars]
+VITE_BACKEND_URL = "https://chatty-backend.pages.dev"
