--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -3,14 +3,11 @@ compatibility_date = "2024-01-19"
 compatibility_flags = ["nodejs_compat"]
 
 [vars]
-MONGODB_URI = ""  # You'll need to set this in Cloudflare's dashboard
-JWT_SECRET = ""   # You'll need to set this in Cloudflare's dashboard
+MONGODB_URI = ""
+JWT_SECRET = ""
 
-[pages]
-pages_build_output_dir = "public"
+[build]
+command = "npm install"
 
 [site]
-bucket = "./public"  # Static assets directory
-
-[triggers]
-crons = ["*/5 * * * *"]  # Run every 5 minutes to keep the worker alive
+bucket = "public"
