--- a/frontend/wrangler.toml
+++ b/frontend/wrangler.toml
@@ -1,25 +1,11 @@
 name = "chatty-frontend"
 compatibility_date = "2024-01-19"
-type = "webpack"
-account_id = ""  # Your Cloudflare account ID
-workers_dev = true
-
-[site]
-bucket = "./dist"  # Your build output directory
-entry-point = "workers-site"
-
-[pages]
-pages_build_output_dir = "dist"
 
 [build]
 command = "npm run build"
 
-[env.production]
-name = "chatty-frontend-prod"
-route = "your-domain.com/*"  # Replace with your domain
-
-[env.production.vars]
-VITE_BACKEND_URL = "https://chatty-backend.pages.dev"
+[site]
+bucket = "dist"
 
 [vars]
 VITE_BACKEND_URL = "https://chatty-backend.pages.dev"
